content edit by AKT

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 <li>User Experience (UX)</li><br>
                 <li>Brand Identity</li>
               </p> -->
-              <a href="./weblogo.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="./service-pages/weblogo.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -1327,7 +1327,7 @@
 
     <div class="container">
       <div class="copyright">
-        Copyright &copy; 2021 <strong><span>Team Inbelievers</span></strong>. All Rights Reserved
+        Copyright &copy; 2021 <strong><span>Team Inbelievers</span></strong>. All Rights Reserved.
       </div>
     </div>
   </footer><!-- End Footer -->
