--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Corporate Skills Training</a></li>
+              <li><a href="./service-pages/cst.html">Corporate Skills Training</a></li>
               <!-- <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li> -->
             </ul>
@@ -448,8 +448,8 @@
             <div class="service-box blue">
               <i class="ri-discuss-line icon"></i>
               <h3>Building the Next Gen</h3>
-              <p>Coporate Skill Training</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <p>Corporate Skill Training</p>
+              <a href="./service-pages/cst.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -457,9 +457,9 @@
             <div class="service-box orange">
               <i class="ri-discuss-line icon"></i>
               <h3>Email Marketing</h3>
-              <p>Coporate Skill Training</p>
+              <p>Help you walk through the journey</p>
               <!-- <p>We offer effective email marketing strategies encompassing newsletters and promotional crafted mails that lead to increased sales and customer loyalty.</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -467,9 +467,9 @@
             <div class="service-box green">
               <i class="ri-discuss-line icon"></i>
               <h3>Google Analytics</h3>
-              <p>Coporate Skill Training</p>
+              <p>Drive the insights into actions</p>
               <!-- <p>We believe in continuous monitoring of the performance of the campaigns to achieve the end goal and would interpret the results by our effective tools.</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -477,9 +477,9 @@
             <div class="service-box red">
               <i class="ri-discuss-line icon"></i>
               <h3>Search Engine Optimization</h3>
-              <p>Coporate Skill Training</p>
+              <p>Committed to spread your presence</p>
               <!-- <p>Organic searches majorly contribute to the conversion of sales and we enhance the visibility and reachability of the brand to a larger audience with the best techniques.</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -487,9 +487,9 @@
             <div class="service-box purple">
               <i class="ri-discuss-line icon"></i>
               <h3>Brand Awareness and Promotion</h3>
-              <p>Coporate Skill Training</p>
+              <p>Create the brand and help customers fall in love with it</p>
               <!-- <p>We drive effective multi  channel based strategies to inform,remind,persuade convincingly and influence the consumers to drive their decision towards purchasing the product or service under your brand. Our business- centric brand awareness campaigns infiltrate consumer minds, spark interest and create a positive association around your brand.</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -497,7 +497,7 @@
             <div class="service-box pink">
               <i class="ri-discuss-line icon"></i>
               <h3>Web and Logo Design</h3>
-              <p>Coporate Skill Training</p>
+              <p>Adding Creativity to your Triumph</p>
               <!-- <p>
                 Your website is the place where most people will interact with your business. Both your online and offline marketing activities will most likely send users to your website.
                 We build effective websites that meets below goals which eventually generates sales.
@@ -506,7 +506,7 @@
                 <li>User Experience (UX)</li><br>
                 <li>Brand Identity</li>
               </p> -->
-              <a href="./service-pages/weblogo.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="./service-pages/weblogo.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -514,9 +514,9 @@
             <div class="service-box orange">
               <i class="ri-discuss-line icon"></i>
               <h3>Lead Generation</h3>
-              <p>Coporate Skill Training</p>
+              <p>Help the right audience find you</p>
               <!-- <p>With the changing trends in the customers preferences, we implement innovative strategies to identify the targeted  audience and convert into potential leads.We help B2B and B2C businesses drive customer acquisition using a combination of tailor-made strategy, ROI analysis, creatives and customer behaviour analytics.</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -524,9 +524,9 @@
             <div class="service-box green">
               <i class="ri-discuss-line icon"></i>
               <h3>Conversion Rate Optimisation (CRO)</h3>
-              <p>Coporate Skill Training</p>
+              <p>For us,to grow the business is to double the conversion rather than double the traffic </p>
               <!-- <p>Search Engine Optimisation (SEO)Search Engine Optimisation (SEO)Search Engine Optimisation (SEO)</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -534,9 +534,9 @@
             <div class="service-box blue">
               <i class="ri-discuss-line icon"></i>
               <h3>Social Media Optimization</h3>
-              <p>Coporate Skill Training</p>
+              <p>Endless Possibilities,Endless Business</p>
               <!-- <p>We primarily target  to achieve measurable results and hence evolve  with the best content marketing strategies for profitable sales through social media platforms.</p> -->
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
@@ -647,12 +647,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
-                    Non consectetur a erat nam at lectus urna duis?
+                    Do you help small scale business? How do we contact you?
                   </button>
                 </h2>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                    Ofcourse we help. Emerging businesses are the key to any economy. Please contact <b>info@inbelievers.com</b> with your exact queries.   
                   </div>
                 </div>
               </div>
@@ -660,12 +660,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
-                    Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
+                    When can I expect my business to be successful?
                   </button>
                 </h2>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    We are committed to work through all the means until we achieve the desirable goals of our clients.Effective strategies are designed depending on the industry and competition where we reach the targetted results.For more information,please contact <b>info@inbelievers.com</b>
                   </div>
                 </div>
               </div>
@@ -673,12 +673,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?
+                    I own a superstore currently and would like to expand my business?How will you be able to help us?
                   </button>
                 </h2>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    We are pioneers in creating an unforgettable online management experience to our clients by implementing the effective solutions.  
                   </div>
                 </div>
               </div>
@@ -694,12 +694,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-1">
-                    Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                    What is the eligibility to avail the services of corporate skills training program?
                   </button>
                 </h2>
                 <div id="faq2-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    We invite all the candidates of UnderGraduation/PostGraduation who seek development and growth in careers of all the sectors of the Industry.
                   </div>
                 </div>
               </div>
@@ -707,12 +707,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-2">
-                    Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+                    How do we choose the right training program for us?
                   </button>
                 </h2>
                 <div id="faq2-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                    We have different plans comprising of all the training programs that we render and you may pick up the right one that best fits your schedule and goals.
                   </div>
                 </div>
               </div>
@@ -720,12 +720,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-3">
-                    Varius vel pharetra vel turpis nunc eget lorem dolor?
+                    We are a prominent educational institution? How are you different from our existing inhouse team?
                   </button>
                 </h2>
                 <div id="faq2-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                    With a team of certified experts,we offer the best quality of services exceptionally for the educational institutions by creating quality content and structured program.
                   </div>
                 </div>
               </div>
