--- a/service-pages/cst.html
+++ b/service-pages/cst.html
@@ -27,13 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: FlexStart - v1.1.1
-  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -59,7 +52,7 @@
             <!-- <li><a href="blog.html">Blog</a></li> -->
             <li class="dropdown"><a href="#"><span>Key Programs</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="#">Digital Marketing</a></li>
+                <li><a href="../service-pages/dms.html">Digital Marketing</a></li>
                 <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                   <ul>
                     <li><a href="#">Deep Drop Down 1</a></li>
@@ -151,21 +144,21 @@
               <div class="row gy-2"> 
               <div class="entry-content col-lg-10 col-md-6">
                 <p><strong>QUANTITATIVE APTITUDE</strong></p>
-                <p><img src="../assets/img/services/quant.jpg" alt="" style="float:right;width:300px;height:225px;">
+                <p><img src="../assets/img/services/quant.jpg" alt="" style="float:right;width:300px;height:225px;padding-left: 10px;">
                   Quantitative aptitude shows one’s ability to comprehend and solve problems primarily assessing mathematical ability. As the tests are time bound,the candidates ability to reason and make effective decisions quickly under pressure is exhibited.
                 </p>
               </div>
 
               <div class="entry-content col-lg-10 col-md-6">
                 <p><strong>LOGICAL REASONING</strong></p>
-                <p><img src="../assets/img/services/logical.jpg" alt="" style="float:left;width:300px;height:225px;">
+                <p><img src="../assets/img/services/logical.jpg" alt="" style="float:left;width:300px;height:225px;padding-right: 10px;">
                   Logical reasoning  measures the candidates ability to draw logical conclusions based on statements or arguments and to identify the strengths and weaknesses of those arguments.This demonstrates the ability to analyze and interpret the problems.
                 </p>
               </div>
 
               <div class="entry-content col-lg-10 col-md-6">
                 <p><strong>VERBAL ABILITY</strong></p>
-                <p><img src="../assets/img/services/verbal.jpg" alt="" style="float:right;width:300px;height:225px;">
+                <p><img src="../assets/img/services/verbal.jpg" alt="" style="float:right;width:300px;height:225px;padding-left: 10px;">
                   Verbal Ability defines the capability of a person in expressing ideas using words in a clearly understandable manner.It develops qualities such as perception, understanding and solving complicated subject questions ensuring candidates have a great vocabulary.
                 </p>
               </div>
@@ -339,9 +332,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="../index.html#hero">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="../index.html#about">About us</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="../index.html#services">Services</a></li>
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
@@ -350,9 +343,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Digital Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Building the Next Gen</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Lead Generation</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="../service-pages/dms.html">Digital Marketing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="../service-pages/cst.html">Building the Next Gen</a></li>
+              <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Lead Generation</a></li> -->
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">SEO</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">CRO</a></li> -->
             </ul>
