--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: FlexStart - v1.1.1
-  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -57,7 +51,7 @@
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li class="dropdown"><a href="#"><span>Key Programs</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Digital Marketing</a></li>
+              <li><a href="./service-pages/dms.html">Digital Marketing</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -1291,9 +1285,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
@@ -1302,9 +1296,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Digital Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Building the Next Gen</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Lead Generation</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="./service-pages/dms.html">Digital Marketing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="./service-pages/cst.html">Building the Next Gen</a></li>
+              <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Lead Generation</a></li> -->
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">SEO</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">CRO</a></li> -->
             </ul>
