newsletter&contact.php updated

--- a/service-pages/cst.html
+++ b/service-pages/cst.html
@@ -144,21 +144,21 @@
               <div class="row gy-2"> 
               <div class="entry-content col-lg-10 col-md-6">
                 <p><strong>QUANTITATIVE APTITUDE</strong></p>
-                <p><img src="../assets/img/services/quant.jpg" alt="" style="float:right;width:300px;height:225px;padding-left: 10px;">
+                <p><img src="../assets/img/services/quant.JPG" alt="" style="float:right;width:300px;height:225px;padding-left: 10px;">
                   Quantitative aptitude shows one’s ability to comprehend and solve problems primarily assessing mathematical ability. As the tests are time bound,the candidates ability to reason and make effective decisions quickly under pressure is exhibited.
                 </p>
               </div>
 
               <div class="entry-content col-lg-10 col-md-6">
                 <p><strong>LOGICAL REASONING</strong></p>
-                <p><img src="../assets/img/services/logical.jpg" alt="" style="float:left;width:300px;height:225px;padding-right: 10px;">
-                  Logical reasoning  measures the candidates ability to draw logical conclusions based on statements or arguments and to identify the strengths and weaknesses of those arguments.This demonstrates the ability to analyze and interpret the problems.
+                <p><img src="../assets/img/services/logical.JPG" alt="" style="float:left;width:300px;height:225px;padding-right: 10px;">
+                  Logical reasoning  measures the candidate's ability to draw logical conclusions based on statements or arguments and to identify the strengths and weaknesses of those arguments.This demonstrates the ability to analyze and interpret the problems.
                 </p>
               </div>
 
               <div class="entry-content col-lg-10 col-md-6">
                 <p><strong>VERBAL ABILITY</strong></p>
-                <p><img src="../assets/img/services/verbal.jpg" alt="" style="float:right;width:300px;height:225px;padding-left: 10px;">
+                <p><img src="../assets/img/services/verbal.JPG" alt="" style="float:right;width:300px;height:225px;padding-left: 10px;">
                   Verbal Ability defines the capability of a person in expressing ideas using words in a clearly understandable manner.It develops qualities such as perception, understanding and solving complicated subject questions ensuring candidates have a great vocabulary.
                 </p>
               </div>
@@ -304,7 +304,7 @@
             <p>Subscribe using email id to get latest update from us.</p>
           </div>
           <div class="col-lg-6">
-            <form action="" method="post">
+            <form action="../forms/newsletter.php" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
