--- a/service-pages/dms.html
+++ b/service-pages/dms.html
@@ -161,7 +161,7 @@
             <p>Subscribe using email id to get latest update from us.</p>
           </div>
           <div class="col-lg-6">
-            <form action="" method="post">
+            <form action="../forms/newsletter.php" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
